# open-research-metadata-explorer

./: README.md  constants.py  data_harvester.py  harvester_manager.py  interface.py  pyproject.toml  requirements.txt  settings.py  settings.yaml
harvesters/: generics.py  not_yet_implemented.py  openalex.py
